# qmlrs

./: Cargo.toml
examples/: oracle.rs  oracle_ui.qml  self_encryptor.rs  self_encryptor_ui.qml
ext/libqmlrswrapper/: libqmlrswrapper.cpp
src/: ffi.rs
