[package]

name = "qmlrs"
version = "0.0.1"
authors = ["Mikko Perttunen <cyndis@kapsi.fi>"]
license = "MIT/Apache-2.0"

build = "build.rs"

[dependencies]
libc = "*"
rand = "*"
tempdir = "*"
docopt = "*"
rustc-serialize = "*"
rust-crypto = "*"
cbor = "*"
asynchronous = "*"

[build-dependencies.pkg-config]
git = "https://github.com/alexcrichton/pkg-config-rs"

[dependencies.self_encryption]
git = "https://github.com/maidsafe/self_encryption.git"
